--- a/-خريج-المقابلات.html
+++ b/-خريج-المقابلات.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>طلب على الشاغر</title><!-- site title-->
+       <title>مقابلات</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -28,14 +28,14 @@
             <div class="media ">
               <img src="lib/img/Group%20124.svg"style="width:60px;" class="align-self-center mr-3 " alt="...">
               <div class="media-body">
-                <h5 class="mt-4" style="font-size:18px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
-                <p style="color:#FFEB3B">تدريب خريجين على رأس العمل</p>
+                <h5 class="mt-4" style="font-size:15px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
+                <p style="color:#FFEB3B;font-size:13px;">تدريب خريجين على رأس العمل</p>
               </div>
             </div>
           </div>
           <div style="text-align:center;margin-top:-83px;margin-right:70px ;">
-            <li><a href="https://xbootstrap.com">الصفحة الرئيسية</a></li>
-            <li><a href="https://xbootstrap.com">بيانات المشغل</a></li>
+            <li><a href="">الصفحة الرئيسية</a></li>
+            <li><a href="">بيانات المشغل</a></li>
             <li><a href="javascript:void(0)">شاغر<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
               <ul class="dropdown">
                 <li><a href="">عرض شواغر</a></li>
@@ -45,9 +45,9 @@
             </li>
             <li><a href="javascript:void(0)" >المتدربين<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
               <ul class="dropdown">
-                <li><a href="https://xbootstrap.com">عرض المتدربين</a></li>
-                <li><a href="https://xbootstrap.com">تقييم المتدربين</a></li>
-                  <li><a href="https://xbootstrap.com">تقييم البرنامج
+                <li><a href="">عرض المتدربين</a></li>
+                <li><a href="">تقييم المتدربين</a></li>
+                  <li><a href="">تقييم البرنامج
                 </a></li>
                 <li><a href="https://xbootstrap.com">تقديم خطة تدريب</a></li>
                   <li><a href="https://xbootstrap.com">ملف حضور المتدرب</a></li>
@@ -73,32 +73,32 @@
       <div class="container">
         <!--  عنوان الصفحة-->
         <div class="row mt-5 mb-3">
-          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">الأخبار</h1>
+          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">المقابلات</h1>
         </div>
         <div class="row">
           <div class="card-group">
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الأول </h5>
+                <h5 style="color:black;" class="card-title">مقابلة 1</h5>
                 <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
               </div>
             </div>
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثاني</h5>
+                <h5 style="color:black;" class="card-title">مقابلة 2</h5>
                 <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
               </div>
             </div>
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثالث </h5>
+                <h5 style="color:black;" class="card-title">مقابلة 3 </h5>
                 <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
@@ -109,27 +109,27 @@
         <div class="row">
           <div class="card-group">
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الرابع </h5>
+                <h5 style="color:black;" class="card-title">مقابلة 4 </h5>
                 <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
               </div>
             </div>
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الخامس </h5>
+                <h5 style="color:black;" class="card-title">مقابلة 5</h5>
                 <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
               </div>
             </div>
             <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
               <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر السادس </h5>
+                <h5 style="color:black;" class="card-title">مقابلة 6 </h5>
                 <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
                 <p class="card-text"><small class="text-muted">1/1/2019</small></p>
                 <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
