--- a/المقابلات.html
+++ b/المقابلات.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>تقييم نهائي</title><!-- site title-->
+       <title>طلب على الشاغر</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -69,68 +69,75 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-
-        <!--********************************************* content of page*********************************************************************-->
-                  <div class="container">
-                    <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">تقييم نهائي</h1>
-                    </div>
-                    <div class="row mt-5">
-                      <table  class="table table-bordered wow bounceIn" >
-                        <thead >
-                          <tr style="background:#288CF0;color:white;">
-                             <th style="text-align: center;">#</th>
-                             <th style="text-align: center;">الاسم </th>
-                             <th style="text-align: center;">المسمى الوظيفي</th>
-                             <th style="text-align: center;">بداية التدريب</th>
-                             <th style="text-align: center;">نهاية التدريب</th>
-                             <th style="text-align: center;">تقييم نهائي</th>
-                          </tr>
-                       </thead>
-                       <tbody>
-                          <tr style="background-color:white">
-                            <th scope="row">1</th>
-                            <td style="text-align: center;">
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"><button type="button" class="btn btn-warning wow bounceInUp">التقييم </button></td>
-                         </tr>
-                           <th scope="row" class="table-info">2</th>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info "style="text-align: center;"><button type="button" class="btn btn-warning wow bounceInUp">التقييم </button></td>
-
-                         </tr>
-                         <tr>
-                           <th scope="row">3</th>
-                             <td></td>
-                             <td></td>
-                             <td></td>
-                             <td></td>
-                             <td style="text-align: center;"><button type="button" class="btn btn-warning wow bounceInUp">التقييم </button></td>
-                           </tr>
-                           <tr>
-                             <th scope="row" class="table-info">4</th>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info "style="text-align: center;"><button type="button" class="btn btn-warning wow bounceInUp">التقييم </button></td>
-                           </tr>
-                            </tbody>
-                           </table>
-                         </div>
-                           <!--  زر الطباعة-->
-                             <div class="row mt-5">
-                                <div class="col-xs-6 col-sm-9  ">
-                                </div>
-                                <div class="col-xs-4 col-sm-3 " >
-                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
-                                </div>
-                              </div>
+<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
+      <div class="container">
+        <!--  عنوان الصفحة-->
+        <div class="row mt-5 mb-3">
+          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">المقابلات</h1>
+        </div>
+        <div class="row">
+          <div class="card-group">
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 1</h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 2</h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 3 </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card-group">
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 4 </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 5</h5>
+                <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">مقابلة 6 </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+          </div>
+        </div>
+              </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
