--- a/الموقع الجغرافي.html
+++ b/الموقع الجغرافي.html
@@ -78,42 +78,31 @@
                     <div class="row">
                         <p class="col wow bounceIn" style="text-align:center;">أهلا وسهلا بك , في هذا المكان يمكنك تحديث بياناتك الشخصية حتى تستطيع الإستفادة من جميع الخدمات التي يتم تقديمها من خلال الموقع</p>
                     </div>
-                    <h4 class="mt-3 wow bounceIn" style="color:#288CF0;">الموقع الجغرافي:</h4>
+                    <h4 class="mt-3 wow bounceIn" style="color:#288CF0;"> الموقع الجغرافي:</h4>
                       <div class="row mt-5" >
                         <!--first col-  -->
                         <div class="col-2" >
                           <label style="text-align:center;" for="">المحافظة:</label>
                         </div>
-                        <div class="col-4">
-                          <select class="col wow bounceInUp" style="height:35px;">
+                        <div class="col-6">
+                          <select class="col wow bounceInUp rounded" style="height:35px;">
                               <option selected>أدخل محافظتك  </option>
                               <option value="1">غزة</option>
-                              <option value="2"></option>
-                              <option value="3"></option>
-                              <option value="4"></option>
+                              <option value="2">شمال غزة</option>
+                              <option value="3">الوسطى</option>
+                              <option value="4">الجنوب</option>
                          </select>
                         </div>
                         <!--second col  -->
-                        <div class="col-2" >
-                          <label class=" control-label ">رقم هاتف المؤسسة:</label>
-                        </div>
-                        <div class="col-4">
-                          <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل رقم هاتف المؤسسة"></input>
-                      </div>
+
                     </div>
                     <!-- third row -->
                     <div class="row mt-4">
                       <div class="col-sm-2">
                         <label style="text-align:center;" for="">المنطقة:</label>
                       </div>
-                      <div class="col-4">
+                      <div class="col-6">
                         <input  type="text" class="form-control wow bounceInUp "  required name="first_name" value="" placeholder="أدخل منطقتك"></input>
-                      </div>
-                      <div class="col-sm-2">
-                        <label class=" control-label " style="font-size:15px;" >البريد الإلكتروني للمؤسسة:</label>
-                      </div>
-                      <div class="col">
-                        <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل البريد الإلكتروني للمؤسسة"></input>
                       </div>
                     </div>
                     <!--second row  -->
@@ -121,24 +110,24 @@
                       <div class="col-2">
                         <label for="">العنوان بالتفصيل:</label>
                       </div>
-                      <div class="col">
-                        <input style="width:970px;" type="text" name="" value=""required  class="wow bounceInUp " placeholder="أدخل عنوانك بالتفصيل ">
+                      <div class="col ">
+                        <input style="width:570px;" type="text" name="" value=""required  class="wow bounceInUp rounded " placeholder="أدخل عنوانك بالتفصيل ">
                       </div>
                     </div>
                     <div class="w-100 mt-5" style="border:1px solid grey;"></div>
-                      <h4 class="mt-5  wow bounceIn" style="color:#288CF0;">بيانات شخص للتواصل:</h4>
+                      <h4 class="mt-5  wow bounceIn" style="color:#288CF0;">معلومات شخص للتواصل:</h4>
                       <div class="row mt-5">
                         <div class="col-sm-2">
                           <label class=" control-label ">الاسم:</label>
                         </div>
                         <div class="col" style="text-align:center;">
-                          <input  type="text" class="form-control wow bounceInUp " required  placeholder="" name="first_name" value="" ></input>
+                          <input  type="text" class="form-control wow bounceInUp "   placeholder="أدخل الاسم رباعي" name="first_name" value="" required></input>
                        </div>
                        <div class="col-sm-2">
                         <label class=" control-label "  >المسمى الوظيفي:</label>
                        </div>
                         <div class="col">
-                          <input  type="text" class="form-control  wow bounceInUp" required  placeholder="" name="first_name" value="" ></input>
+                          <input  type="text" class="form-control  wow bounceInUp"   placeholder="أدخل المسمى الوظيفي" name="first_name" value="" required></input>
                        </div>
                      </div>
                      <div class="row mt-5">
@@ -146,13 +135,13 @@
                          <label class=" control-label " style="font-size:15px;">رقم الهاتف:</label>
                         </div>
                         <div class="col">
-                          <input  type="text" class="form-control wow bounceInUp " required placeholder="" name="first_name" value="" ></input>
+                          <input  type="number" class="form-control wow bounceInUp "  placeholder="أدخل رقم الهاتف" name="first_name" value="" required ></input>
                         </div>
                         <div class="col-sm-2">
                           <label class=" control-label "  style="font-size:15px;">البريد الإلكتروني:</label>
                         </div>
                         <div class="col ">
-                          <input  type="text" class="form-control wow bounceInUp "  style="text-align:center;" placeholder="" name="first_name" value="" required></input>
+                          <input  type="email" class="form-control wow bounceInUp "  placeholder="أدخل البريد الإلكتروني" name="first_name" value="" required></input>
                       </div>
                     </div>
                     <!-- تأكيد المعلومات -->
