--- a/بياناتي-خريج.html
+++ b/بياناتي-خريج.html
@@ -120,25 +120,21 @@
                     <div class="row mt-5">
                     </div>
                     <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">إنشاء حساب مشغل</h1>
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">بياناتي-خريج</h1>
                     </div>
                     <div class="row justify-content-center " style="text-align:center;">
                       <form style="margin-top:50px;width:600px;text-align:center;">
                         <div class="form-group form-check">
-                          <label class="col-sm-3" for="exampleInputPassword1">اسم المشغل</label>
+                          <label class="col-sm-3" for="exampleInputPassword1">اسم الخريج</label>
                           <input style="height:40px;" class="col-sm-8 wow bounceInUp" type="text" class="form-control" id="exampleInputPassword1" placeholder="اسم المشغل" required>
                         </div>
 
                       <div class="form-group form-check">
-                        <label class="col-sm-3" for="exampleInputPassword1">رقم هاتف المؤسسة/جوال:</label>
+                        <label class="col-sm-3" for="exampleInputPassword1">رقم الهاتف/جوال:</label>
                         <input style="height:40px;" class="col-sm-8 wow bounceInUp" type="text" class="form-control" id="exampleInputPassword1" placeholder="رقم الهاتف" required>
                       </div>
                       <div class="form-group form-check">
-                        <label class="col-sm-3" for="exampleInputPassword1">البريد اللكتروني للمؤسسة</label>
-                        <input style="height:40px;" class="col-sm-8 wow bounceInUp" type="email" class="form-control" id="exampleInputPassword1" placeholder="البريد الإلكتروني" required>
-                      </div>
-                      <div class="form-group form-check">
-                        <label class="col-sm-3" for="exampleInputPassword1">اسم المستخدم :</label>
+                        <label class="col-sm-3" for="exampleInputPassword1">البريد الالكتروني :</label>
                         <input style="height:40px;" class="col-sm-8 wow bounceInUp" type="text" class="form-control" id="exampleInputPassword1" placeholder="اسم المستخدم" required>
                       </div>
                       <div class="form-group form-check">
@@ -151,7 +147,9 @@
                       </div>
                       <div class="form-group form-check">
                         <label class="col-sm-3" for="exampleInputPassword1"></label>
-                        <button style="width:400px;" type="submit" class="btn btn-primary col-sm-8 wow bounceIn"  >إنشاء حساب</button>
+                        <button style="width:400px;" type="submit" class="btn btn-primary col-sm-4 wow bounceIn"  >طباعة</button>
+                        <button style="width:400px;" type="submit" class="btn btn-primary col-sm-4 wow bounceIn">  تعديل</button>
+
                       </div>
                       </form>
                     </div>
