--- a/تقييم نهائي 2.html
+++ b/تقييم نهائي 2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>طلب على الشاغر</title><!-- site title-->
+       <title>تقييم شهري</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -69,75 +69,94 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
-      <div class="container">
-        <!--  عنوان الصفحة-->
-        <div class="row mt-5 mb-3">
-          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">الأخبار</h1>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الأول </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثاني</h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثالث </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الرابع </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الخامس </h5>
-                <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر السادس </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-              </div>
+
+        <!--********************************************* content of page*********************************************************************-->
+                  <div class="container">
+                    <div class="row mt-5">
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">تقييم نهائي</h1>
+                    </div>
+                    <!--  بيانات من الداتا بيز-->
+                    <div class="row mt-5">
+                      <!--first col  -->
+                      <div class="col-sm-3">
+                      </div>
+                        <!--second col  -->
+                      <div class="col-sm-4">
+                        <div class="row">
+                            <div class="col">
+                          <label style="font-size:20px;">اسم المتدرب:</label>
+                          <label style="font-size:20px;margin-right:10px;"></label>
+                        </div>
+                       </div>
+                       <div class="row mt-3">
+                        <div class="col">
+                          <label style="font-size:20px;">رقم الهوية:</label>
+                          <label style="font-size:20px;margin-right:10px;"></label>
+                        </div>
+                        </div>
+                        <div class="row mt-3">
+                          <div class="col">
+                            <label style="font-size:20px;">اسم المشرف:</label>
+                            <label style="font-size:20px;margin-right:10px;"></label>
+                        </div>
+                      </div>
+                    </div>
+                    <!--third col  -->
+                    <div class="col-sm-5">
+                      <div class="row">
+                        <div class="col">
+                          <label style="font-size:20px;">المسمى الوظيفي:</label>
+                          <label style="font-size:20px;margin-right:10px;"></label>
+                        </div>
+                      </div>
+                      <div class="row mt-3">
+                        <div class="col">
+                          <label style="font-size:20px;">تاريخ بداية التدريب:</label>
+                          <label style="font-size:20px;margin-right:10px;"></label>
+                        </div>
+                          </div>
+                          <div class="row mt-3">
+                            <div class="col">
+                              <label style="font-size:20px;">تاريخ نهاية التدريب:</label>
+                              <label style="font-size:20px;margin-right:10px;"></label>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-sm-1">
+                      </div>
+                    </div>
+                    <!--  بداية الجدول-->
+                    <div class="row mt-5">
+                      <table  class="table table-bordered wow bounceIn" >
+                        <thead >
+                          <tr style="background:#288CF0;color:white;">
+                             <th style="text-align: center;">#</th>
+                             <th style="text-align: center;">التقييم النهائي </th>
+                             <th style="text-align: center;">العمليات</th>
+                          </tr>
+                       </thead>
+                       <tbody>
+                        <tr style="background-color:white;text-align:center;">
+                            <th scope="row">1</th>
+                            <td style="text-align: center;">
+                              <a style="font-size:20px;"href="#">عرض التقييم النهائي</a>
+                            </td>
+                             <td style="text-align: center;"> <button type="button" class="btn btn-warning wow bounceInUp">اضافة </button>
+                              <button type="button" class="btn btn-danger wow bounceInUp">تعديل </button>
+                              <button type="button" class="btn btn-info wow bounceInUp">عرض </button></td>
+                            </tr>
+
+                            </tbody>
+                           </table>
+                         </div>
+                           <!--  زر الطباعة-->
+                             <div class="row mt-5">
+                                <div class="col-xs-6 col-sm-9  ">
+                                </div>
+                                <div class="col-xs-4 col-sm-3 " >
+                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
+                                </div>
+                              </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
