--- a/عرض الشواغر.html
+++ b/عرض الشواغر.html
@@ -73,34 +73,28 @@
         <!--********************************************* content of page*********************************************************************-->
                   <div class="container">
                     <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">عرض الشواغر</h1>
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">عرض الشاغر</h1>
                     </div>
                     <div class="row mt-5">
                       <table  class="table table-bordered wow bounceIn" >
                         <thead >
-                          <tr style="background:#288CF0;color:white;">
-                             <th style="text-align: center;">#</th>
-                             <th style="text-align: center;">وصف الشاغر</th>
-                             <th style="text-align: center;">مؤهلات الخريج</th>
-                             <th style="text-align: center;"> متطلبات خاصة</th>
-                             <th style="text-align: center;">المرفقات</th>
-                             <th style="text-align: center;">العمليات </th>
+                          <tr style="background:#288CF0;color:white;text-align: center;">
+                             <th >#</th>
+                             <th >وصف الشاغر</th>
+                             <th >مؤهل الشاغر</th>
+                             <th > متطلبات خاصة</th>
+                             <th >المرفقات</th>
+                             <th >العمليات </th>
                           </tr>
                        </thead>
                        <tbody>
-                          <tr style="background-color:white">
+                          <tr style="background-color:white;text-align: center;">
                             <th scope="row">1</th>
-                            <td style="text-align: center;">
-
-                                <!-- <a href="#collapse" class="nav-toggle">Read More</a> -->
-                                </div>
-                                </div>
-                            <td style="text-align: center;"><div id="collapse" style="display:none">
-                             <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</td>
-                             </div></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;">
+                            <td >
+                            <td ></td>
+                            <td ></td>
+                            <td ></td>
+                            <td >
                             <button type="button" class="btn btn-warning wow bounceInUp">تعديل  </button>
                             <button type="button" class="btn btn-danger wow bounceInUp">حذف </button>
                             <button type="button" class="btn btn-info wow bounceInUp">الطلبات </button>
@@ -144,39 +138,45 @@
                             </tbody>
                            </table>
                          </div>
-                       </div>
-
-              <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
+                         <!--  زر الطباعة-->
+                        <div class="row mt-5">
+                           <div class="col-xs-6 col-sm-9  ">
+                           </div>
+                           <div class="col-xs-4 col-sm-3 " >
+                             <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
+                           </div>
+                        </div>
+                        <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
-      <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
-          <div class="row top-footer">
-              <!-- third side -->
-              <div class="col-xs-12 col-sm-3  img-logo" style="">
-                  <span>مركز العمل التنموي معا</span>
-                  <!-- <img src="lib/img/Group%20124.svg" alt=""> -->
-              </div>
-              <!-- first side -->
-              <div class="col-xs-12 col-sm-3 address" style="">
-                  <p>العنوان غزة - شارع الثلاثيني</p>
-                  <p> ma3an@gmail.com البريد الالكتروني</p>
-                  <p>23907387 (02) الفاكس</p>
-              </div>
-              <div class="col-xs-12 col-sm-3 info" >
-              </div>
-          <!-- second side -->
-          <div class="col-xs-12 col-sm-3 info" style="text-align:right;">
-              <p> الهاتف 059874689 </p>
-              <p> رقم الجوال 2558658</p>
-              <p>الرقم المجاني 1800700500</p>
-          </div>
-        </div>
-          <!--mbottom -->
-          <div class="row bottom-footer">
-              <div class="col-12" >
-                  <p style="text=align:center;margin-top:7px;">جميع الحقوق محفوظة &copy; 2018</p>
-              </div>
-          </div>
-      </footer>
+                        <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
+                            <div class="row top-footer">
+                                <!-- third side -->
+                                <div class="col-xs-12 col-sm-3  img-logo" style="">
+                                    <span>مركز العمل التنموي معا</span>
+                                    <!-- <img src="lib/img/Group%20124.svg" alt=""> -->
+                                </div>
+                                <!-- first side -->
+                                <div class="col-xs-12 col-sm-3 address" style="">
+                                    <p>العنوان غزة - شارع الثلاثيني</p>
+                                    <p> ma3an@gmail.com البريد الالكتروني</p>
+                                    <p>23907387 (02) الفاكس</p>
+                                </div>
+                                <div class="col-xs-12 col-sm-3 info" >
+                                </div>
+                            <!-- second side -->
+                            <div class="col-xs-12 col-sm-3 info" style="text-align:right;">
+                                <p> الهاتف 059874689 </p>
+                                <p> رقم الجوال 2558658</p>
+                                <p>الرقم المجاني 1800700500</p>
+                            </div>
+                          </div>
+                            <!--mbottom -->
+                            <div class="row bottom-footer">
+                                <div class="col-12" >
+                                    <p style="text=align:center;margin-top:7px;">جميع الحقوق محفوظة &copy; 2018</p>
+                                </div>
+                            </div>
+                        </footer>
 <!-- *********************************************** End footer ********************************************************************-->
 
           <style >
