--- a/1 تقييم شهري.html
+++ b/1 تقييم شهري.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>طلب على الشاغر</title><!-- site title-->
+       <title>التقييمات</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -69,75 +69,76 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
-      <div class="container">
-        <!--  عنوان الصفحة-->
-        <div class="row mt-5 mb-3">
-          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">الأخبار</h1>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الأول </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثاني</h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثالث </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الرابع </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الخامس </h5>
-                <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر السادس </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-              </div>
+
+        <!--********************************************* content of page*********************************************************************-->
+                  <div class="container">
+                    <div class="row mt-5">
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">التقييمات</h1>
+                    </div>
+                    <div class="row mt-5">
+                      <table  class="table table-bordered wow bounceIn" >
+                        <thead >
+                          <tr style="background:#288CF0;color:white;">
+                             <th style="text-align: center;">#</th>
+                             <th style="text-align: center;">الاسم </th>
+                             <th style="text-align: center;">المسمى الوظيفي</th>
+                             <th style="text-align: center;">بداية التدريب</th>
+                             <th style="text-align: center;">نهاية التدريب</th>
+                             <th style="text-align: center;">تقييم شهري </th>
+                             <th style="text-align: center;">تقييم نهائي</th>
+                          </tr>
+                       </thead>
+                       <tbody>
+                        <tr style="background-color:white;text-align:center;">
+                            <th scope="row">1</th>
+                            <td style="text-align: center;"> محمد محمد محمد محمد</td>
+                            <td style="text-align: center;">مصمم جرافيكي</td>
+                            <td style="text-align: center;">12/9/2019</td>
+                            <td style="text-align: center;">12/19/12</td>
+                            <td style="text-align: center;">
+                              <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                             </td>
+                             <td style="text-align: center;">
+                               <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                             </td>
+                         </tr>
+                         <tr style="text-align: center;">
+                           <th scope="row" class="table-info">2</th>
+                           <td class="table-info"></td>
+                           <td class="table-info"></td>
+                           <td class="table-info"></td>
+                           <td class="table-info"></td>
+                           <td class="table-info">
+                             <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                           </td>
+                           <td class="table-info" style="text-align: center;">
+                             <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                          </td>
+                         </tr>
+                         <tr  style="background-color:white">
+                           <th scope="row">3</th>
+                           <td style="text-align: center;"></td>
+                           <td style="text-align: center;"></td>
+                           <td style="text-align: center;"></td>
+                           <td style="text-align: center;"></td>
+                           <td style="text-align: center;">
+                             <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                           </td>
+                           <td style="text-align: center;">
+                             <button type="button" class="btn btn-warning wow bounceInUp">التقييم</button>
+                           </td>
+                           </tr>
+                            </tbody>
+                           </table>
+                         </div>
+                           <!--  زر الطباعة-->
+                             <div class="row mt-5">
+                                <div class="col-xs-6 col-sm-9  ">
+                                </div>
+                                <div class="col-xs-4 col-sm-3 " >
+                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
+                                </div>
+                              </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
