--- a/اضافة تدريب اضافي.html
+++ b/اضافة تدريب اضافي.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>تقييم شهري</title><!-- site title-->
+       <title>اضافة تدريب اضافي</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -73,93 +73,43 @@
         <!--********************************************* content of page*********************************************************************-->
                   <div class="container">
                     <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">تقييم شهري</h1>
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">عرض تدريب اضافي</h1>
                     </div>
                     <div class="row mt-5">
-                      <table  class="table table-bordered wow bounceIn" >
-                        <thead >
-                          <tr style="background:#288CF0;color:white;">
-                             <th style="text-align: center;">#</th>
-                             <th style="text-align: center;">الاسم </th>
-                             <th style="text-align: center;">المسمى الوظيفي</th>
-                             <th style="text-align: center;">بداية التدريب</th>
-                             <th style="text-align: center;">نهاية التدريب</th>
-                             <th style="text-align: center;">تقييم شهر 1</th>
-                             <th style="text-align: center;">تقييم شهر 2</th>
-                             <th style="text-align: center;">تقييم شهر 3</th>
-                          </tr>
-                       </thead>
-                       <tbody>
-                        <tr style="background-color:white">
-                            <th scope="row">1</th>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"><button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                              <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                            </td>
-                            <td style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                                <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                            </td>
-                            <td style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                            <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                            </td>
-                         </tr>
-                           <th scope="row" class="table-info">2</th>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info" style="text-align: center;">
-                             <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                            <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                          </td>
-                          <td class="table-info" style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                            <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                          </td>
-                          <td class="table-info" style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                            <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button>
-                          </td>
-                         </tr>
-                         <tr  style="background-color:white">
-                           <th scope="row">3</th>
-                           <td style="text-align: center;"></td>
-                           <td style="text-align: center;"></td>
-                           <td style="text-align: center;"></td>
-                           <td style="text-align: center;"></td>
-                           <td style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                             <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
-                             <td style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                               <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
-                               <td style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                                 <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
-                           </tr>
-                           <tr>
-                             <th scope="row" class="table-info">4</th>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info" style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                               <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
-                               <td class="table-info" style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                                 <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
-                                 <td class="table-info" style="text-align: center;">  <button type="button" class="btn btn-warning wow bounceInUp">التقييم </button>
-                                   <button type="button" class="btn btn-danger wow bounceInUp">تعليق الإدارة </button></td>
+                      <div class="col" style="text-align:center;">
+                        <label style="font-size:25px;" for="" >الاسم:</label>
+                        <label style="font-size:25px;" for="" >محمد محمد</label>
+                      </div>
+                    </div>
+                    <div class="row mt-3 justify-content-center" >
+                        <div class="col-sm-1 ">
+                      <label for="">عنوان الطلب:</label>
+                    </div>
+                    <div class="col-sm-3 ">
+                      <input style="width:370px;" class="wow bounceInUp" type="text" name="" value="">
+                    </div>
+                  </div>
+                    <div class="row mt-2 justify-content-center" >
+                        <div class="col-sm-1 ">
+                      <label for="">التفاصيل:</label>
+                    </div>
+                    <div class="col-sm-3 ">
+                      <textarea name="name" rows="8" cols="50" class="wow bounceInUp"></textarea>
+                      </div>
+                  </div>
 
-                           </tr>
-                            </tbody>
-                           </table>
-                         </div>
-                           <!--  زر الطباعة-->
-                             <div class="row mt-5">
-                                <div class="col-xs-6 col-sm-9  ">
-                                </div>
-                                <div class="col-xs-4 col-sm-3 " >
-                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
-                                </div>
-                              </div>
+
+                  </div>
+                </div>
+                <!--  الارسال-->
+                  <div class="row mt-5">
+                     <div class="col-xs-4 col-sm-6  ">
+                     </div>
+                     <div class="col-xs-4 col-sm-3 " >
+                       <button style="width:160px;" type="submit" class="btn btn-info wow bounceIn ">إرسال</button>
+                     </div>
+                   </div>
+                 </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
