--- a/التدريب-خريج.html
+++ b/التدريب-خريج.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>طلب على الشاغر</title><!-- site title-->
+       <title>التدريب</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -28,32 +28,28 @@
             <div class="media ">
               <img src="lib/img/Group%20124.svg"style="width:60px;" class="align-self-center mr-3 " alt="...">
               <div class="media-body">
-                <h5 class="mt-4" style="font-size:18px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
-                <p style="color:#FFEB3B">تدريب خريجين على رأس العمل</p>
+                <h5 class="mt-4" style="font-size:15px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
+                <p style="color:#FFEB3B;font-size:13px;">تدريب خريجين على رأس العمل</p>
               </div>
             </div>
           </div>
           <div style="text-align:center;margin-top:-83px;margin-right:70px ;">
-            <li><a href="https://xbootstrap.com">الصفحة الرئيسية</a></li>
-            <li><a href="javascript:void(0)">المشغل<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
+            <li><a href="">الصفحة الرئيسية</a></li>
+            <li><a href="">بيانات المشغل</a></li>
+            <li><a href="javascript:void(0)">شاغر<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
               <ul class="dropdown">
-                <li><a href="">بيانات</a></li>
-                <li><a href="">عضويات</a></li>
-              </ul>
-            </li>
-            <li><a href="javascript:void(0)">الشواغر<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
-              <ul class="dropdown">
-                <li><a href="">إضافة </a></li>
-                <li><a href="">عرض</a></li>
-                <li><a href="">طلبات</a></li>
+                <li><a href="">عرض شواغر</a></li>
+                <li><a href="">إضافة شواغر</a></li>
+                <li><a href="">طلبات ع الشاغر</a></li>
               </ul>
             </li>
             <li><a href="javascript:void(0)" >المتدربين<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
               <ul class="dropdown">
-                <li><a href="https://xbootstrap.com">عرض</a></li>
-                <li><a href="https://xbootstrap.com">تقييم شهري</a></li>
-                  <li><a href="https://xbootstrap.com">تقييم نهائي</a></li>
-                <li><a href="https://xbootstrap.com">طلب تدريب إضافي</a></li>
+                <li><a href="">عرض المتدربين</a></li>
+                <li><a href="">تقييم المتدربين</a></li>
+                  <li><a href="">تقييم البرنامج
+                </a></li>
+                <li><a href="https://xbootstrap.com">تقديم خطة تدريب</a></li>
                   <li><a href="https://xbootstrap.com">ملف حضور المتدرب</a></li>
                 </ul>
                 </li>
@@ -63,14 +59,8 @@
                     <li><a href="https://xbootstrap.com">مقابلات</a></li>
                   </ul>
                 </li>
-                <li><a href="javascript:void(0)" >شكاوي وإقتراحات<span class="glyphicon glyphicon-chevron-down iconsize"></span></a>
-                  <ul class="dropdown">
-                    <li><a href="https://xbootstrap.com">إضافة</a></li>
-                    <li><a href="https://xbootstrap.com">عرض</a></li>
-                    </ul>
-                    </li>
-                    <li><button type="button" class="btn btn-primary">الإشعارات<span class="badge badge-light">4</span></button></li>
-                    <li ><label style="border-radius:20px;margin-left:-270px;width:150px;border:3px solid #FFEB3B;padding:10px;font-size:25px;color:#FFEB3B;">المدير</label></li>
+                <li><a href="https://xbootstrap.com">شكاوي وإقتراحات</a></li>
+                <li ><label style="border-radius:20px;margin-left:-280px;width:150px;border:3px solid #FFEB3B;padding:10px;font-size:25px;color:#FFEB3B;">المدير</label></li>
               </div>
           </div>
         </div>
@@ -79,77 +69,115 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-<!--***********************************************************************************************************************-->
+<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
       <div class="container">
         <!--  عنوان الصفحة-->
-        <div class="row mt-5">
+        <div class="row mt-5 mb-3">
+          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">التدريب</h1>
         </div>
+        <!--  -->
         <div class="row mt-5">
-          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">طلب على الشاغر</h1>
+          <!--first col  -->
+          <div class="col-sm-3">
+          </div>
+            <!--second col  -->
+          <div class="col-sm-4">
+            <div class="row">
+                <div class="col">
+              <label style="font-size:20px;">اسم المتدرب:</label>
+              <label style="font-size:20px;margin-right:10px;"></label>
+            </div>
+           </div>
+           <div class="row mt-3">
+            <div class="col">
+              <label style="font-size:20px;">رقم الهوية:</label>
+              <label style="font-size:20px;margin-right:10px;"></label>
+            </div>
+            </div>
+            <div class="row mt-3">
+              <div class="col">
+                <label style="font-size:20px;">اسم المشرف:</label>
+                <label style="font-size:20px;margin-right:10px;"></label>
+            </div>
+          </div>
         </div>
-      <!--  بداية محتوى الصفحة-->
-        <div class="row mt-5 ">
-          <table  class="table table-bordered wow bounceIn" >
-            <thead >
-              <tr style="background:#288CF0;color:white;">
-                 <th style="text-align: center;">#</th>
-                 <th style="text-align: center;">الاسم  </th>
-                 <th style="text-align: center;">منطقة السكن</th>
-                 <th style="text-align: center;">التخصص </th>
-                 <th style="text-align: center;">اسم الجامعة </th>
-                 <th style="text-align: center;">سنة التخصص</th>
-                 <th style="text-align: center;">المهارات </th>
-              </tr>
-           </thead>
-           <tbody>
-              <tr style="background-color:white">
-                <th scope="row">1</th>
-                <td style="text-align: center;"></td>
-                <td style="text-align: center;"></td>
-                <td style="text-align: center;"></td>
-                <td style="text-align: center;"></td>
-                <td style="text-align: center;"></td>
-                <td style="text-align: center;"></td>
+        <!--third col  -->
+        <div class="col-sm-5">
+          <div class="row">
+            <div class="col">
+              <label style="font-size:20px;">المسمى الوظيفي:</label>
+              <label style="font-size:20px;margin-right:10px;"></label>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col">
+              <label style="font-size:20px;">تاريخ بداية التدريب:</label>
+              <label style="font-size:20px;margin-right:10px;"></label>
+            </div>
+              </div>
+              <div class="row mt-3">
+                <div class="col">
+                  <label style="font-size:20px;">تاريخ نهاية التدريب:</label>
+                  <label style="font-size:20px;margin-right:10px;"></label>
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-1">
+          </div>
+        </div>
 
-             </tr>
-               <th scope="row" class="table-info">2</th>
-               <td class="table-info"></td>
-               <td class="table-info"></td>
-               <td class="table-info"></td>
-               <td class="table-info"></td>
-               <td class="table-info"></td>
-               <td class="table-info"></td>
-             </tr>
-             <tr>
-               <th scope="row">3</th>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-                 <td></td>
-               </tr>
-               <tr>
-                 <th scope="row" class="table-info">4</th>
-                 <td class="table-info"></td>
-                 <td class="table-info"></td>
-                 <td class="table-info"></td>
-                 <td class="table-info"></td>
-                 <td class="table-info"></td>
-                 <td class="table-info"></td>
-               </tr>
-                </tbody>
-               </table>
+
              </div>
-           </div>
-           </div>
-           <!--  زر الطباعة-->
-             <div class="row mt-5">
-                <div class="col-xs-6 col-sm-9  ">
+
+               <!--  الأزرار-->
+               <div class="row mt-5">
+               </div>
+                 <div class="row mt-5">
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <button style="width:120px;" type="button" class="btn btn-danger wow bounceInUp ">تقييم شهري</button>
+                   </div>
+                   <div class="col">
+                     <button  style="width:120px;" type="button" class="btn btn-info wow bounceInUp ">تقييم نهائي</button>
+                   </div>
+                   <div class="col">
+                     <button style="width:120px;" type="button" class="btn btn-danger wow bounceInUp ">عرض خطة تدريب</button>
+                   </div>
+                   <div class="col">
+                     <button  style="width:120px;"type="button" class="btn btn-info wow bounceInUp ">إرفاق</button>
+                   </div>
+                   <div class="col">
+                     <button  style="width:120px;"type="button" class="btn btn-danger wow bounceInUp ">ملف حضور</button>
+                   </div>
+                   <div class="col">
+                     <button style="width:120px;" type="button" class="btn btn-info wow bounceInUp ">عرض أنشطة</button>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                   <div class="col">
+                     <label></label>
+                   </div>
+                  </div>
                 </div>
-                <div class="col-xs-4 col-sm-3 " >
-                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
-                </div>
+              </div>
               </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
