--- a/بيانات المشغل.html
+++ b/بيانات المشغل.html
@@ -150,10 +150,9 @@
                              </div>
                            </div>
                             <!--مجال عمل الشغل   -->
-                            <div class="form-group mt-5">
+                            <!-- <div class="form-group mt-5">
                               <div class="row">
                                 <label class=" control-label col-sm-2" for="email"> مجال عمل المشغل:</label>
-                                <!-- <input class="col-sm-6" type="text" class="form-control" id="email" placeholder="" name="first_name" value="" ></input> -->
                                 <select class="col-sm-5 in wow bounceInUp">
                                     <option selected>أدخل مجال عمل المشغل </option>
                                     <option value="1">خدمات صحية</option>
@@ -182,7 +181,46 @@
                                </div>
                                <textarea style="display:none;" class="col-sm-6" name=" " id="div22" placeholder="الرجاء وصف مجال وطبيعة العمل بشكل أوضح" rows="8" cols="80"></textarea>
                              </div>
+                           </div> -->
+                           <!--مجال عمل الشغل   -->
+                      <div class="form-group mt-5">
+                        <div class="row">
+                          <label class=" control-label col-sm-2" for="email"> مجال عمل المشغل:</label>
+                          <!-- <input class="col-sm-6" type="text" class="form-control" id="email" placeholder="" name="first_name" value="" ></input> -->
+                          <select class="col-sm-5 in wow bounceInUp">
+                              <option selected>أدخل مجال عمل المشغل </option>
+                              <option value="1">خدمات صحية</option>
+                              <option value="2">خدمات قانونية</option>
+                              <option value="3">تعليم </option>
+                              <option value="4">خدمات لوجستية</option>
+                              <option value="5">تطوير برمجيات وتكنولوجيا معلومات</option>
+                              <option value="6">صحافة وإعلام وملتميديا</option>
+                              <option value="7">هندسة وإنشاءات</option>
+                              <option value="8">تجارة وبيع بالتجزئة</option>
+                              <option value="9">خدمات استشارية (إدارية وتسويقية ومالية)</option>
+                         </select>
+                         <input class="col-sm-1 oo dd" type="checkbox" name="" value="" >
+                         <label  for="">أخرى</label>
+                       </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="row">
+                          <label class=" control-label col-sm-2 wow bounceInUp" for="email"></label>
+                           <input type="text" name="" value="" style="width:600px;display:none;"  id="div33" placeholder="الرجاء أدخل مجال العمل المشغل" required>
+                         </div>
+                         <div class="row mt-2">
+                           <div class="col-sm-2">
                            </div>
+                           <textarea style="display:none;" class="col-sm-6" name=" " id="div2" placeholder="الرجاء وصف مجال وطبيعة العمل بشكل أوضح" rows="8" cols="80"></textarea>
+                        </div>
+                       </div>
+                        <div class="form-group">
+                         <div class="row">
+                           <div class="col-2">
+                           </div>
+                           <textarea style="display:none;" class="col-sm-6" name=" " id="div22" placeholder="الرجاء وصف مجال وطبيعة العمل بشكل أوضح" rows="8" cols="80"></textarea>
+                         </div>
+                        </div>
                             <!-- عدد ونوع الموطفين -->
                             <div class="form-group mt-5">
                               <div class="row">
@@ -196,9 +234,9 @@
                             <div class="form-group ">
                               <div class="row">
                                 <label class=" control-label col-sm-2" for="email"> </label>
-                                <label  class=" control-label col-sm-1" for="email">موظفين   ذكور</label>
+                                <label  class=" control-label col-sm-1" for="email">ذكور</label>
                                 <input class="col-sm-2 wow bounceInUp" type="number" class="form-control" id="email" placeholder="" name="first_name" value="" required></input>
-                                <label  class=" control-label col-sm-1" for="email">موظفين إناث </label>
+                                <label  class=" control-label col-sm-1" for="email">إناث</label>
                                 <input class="col-sm-2 wow bounceInUp" type="number" class="form-control" id="email" placeholder="" name="first_name" value="" required></input>
                               </div>
                              </div>
@@ -222,7 +260,7 @@
                                 <div class="col-sm-2 ">
                                 </div>
                               <div class="col-sm-2 ">
-                              <label for="exampleFormControlFile1">قم بتحميل سيرتك الذاتية:</label>
+                              <label for="exampleFormControlFile1">السيرة الذاتية للمشغل:</label>
                             </div>
                             <div class="col-sm-4 ">
                           <input type="file" class="form-control-file wow bounceInUp" id="exampleFormControlFile1">
@@ -233,7 +271,7 @@
                           <div class="w-100 mt-5" style="border:1px solid grey;"></div>
                           <h4 class="mt-3 wow bounceIn" style="color:#288CF0;">الموقع الجغرافي:</h4>
                             <div class="row mt-5" >
-                              <!--first col-  -->
+                              <!--المحافظة  -->
                               <div class="col-sm-2" >
                                 <label style="text-align:center;" for="">المحافظة:</label>
                               </div>
@@ -247,7 +285,25 @@
                                </select>
                               </div>
                             </div>
-                              <!--second col  -->
+                            <!-- المنطقة -->
+                            <div class="row mt-4">
+                              <div class="col-sm-2">
+                                <label style="text-align:center;" for="">المنطقة:</label>
+                              </div>
+                              <div class="col-sm-6">
+                                <input  type="text" class="form-control wow bounceInUp "  required name="first_name" value="" placeholder="أدخل منطقتك"></input>
+                              </div>
+                            </div>
+                            <!--العنوان بالتفصيل  -->
+                            <div class="row mt-4">
+                              <div class="col-sm-2">
+                                <label for="">العنوان بالتفصيل:</label>
+                              </div>
+                              <div class="col-sm-6">
+                                <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل العنوان بالتفصيل"></input>
+                              </div>
+                            </div>
+                              <!--رقم هاتف المؤسسة  -->
                               <div class="row mt-3" >
                               <div class="col-sm-2" >
                                 <label class=" control-label ">رقم هاتف المؤسسة:</label>
@@ -256,30 +312,22 @@
                                 <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل رقم هاتف المؤسسة"></input>
                             </div>
                           </div>
-                          <!-- third row -->
-                          <div class="row mt-4">
-                            <div class="col-sm-2">
-                              <label style="text-align:center;" for="">المنطقة:</label>
+                          <!--رقم هاتف المؤسسة  -->
+                          <div class="row mt-3" >
+                            <div class="col-sm-2" >
+                              <label class=" control-label ">رقم جوال المؤسسة:</label>
                             </div>
                             <div class="col-sm-6">
-                              <input  type="text" class="form-control wow bounceInUp "  required name="first_name" value="" placeholder="أدخل منطقتك"></input>
+                              <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل رقم جوال المؤسسة"></input>
                             </div>
                           </div>
+                          <!--  البريد الالكتروني للمؤسسة-->
                           <div class="row mt-4">
                             <div class="col-sm-2">
                               <label class=" control-label " style="font-size:15px;" >البريد الإلكتروني للمؤسسة:</label>
                             </div>
                             <div class="col-sm-6">
                               <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل البريد الإلكتروني للمؤسسة"></input>
-                            </div>
-                          </div>
-                          <!--second row  -->
-                          <div class="row mt-4">
-                            <div class="col-sm-2">
-                              <label for="">العنوان بالتفصيل:</label>
-                            </div>
-                            <div class="col-sm-6">
-                              <input  type="text" class="form-control wow bounceInUp " required  name="first_name" value="" placeholder="أدخل العنوان بالتفصيل"></input>
                             </div>
                           </div>
                           <div class="w-100 mt-5" style="border:1px solid grey;"></div>
@@ -302,10 +350,10 @@
                            </div>
                            <div class="row mt-3">
                              <div class="col-sm-2">
-                               <label class=" control-label " style="font-size:15px;">رقم الهاتف:</label>
+                               <label class=" control-label " style="font-size:15px;">رقم الهاتف/جوال:</label>
                               </div>
                               <div class="col-sm-6">
-                                <input  type="text" class="form-control wow bounceInUp " required placeholder="رقم الهاتف" name="first_name" value="" ></input>
+                                <input  type="text" class="form-control wow bounceInUp " required placeholder="رقم الهاتف/الجوال" name="first_name" value="" ></input>
                               </div>
                             </div>
                             <div class="row mt-3">
@@ -316,10 +364,15 @@
                                 <input  type="text" class="form-control wow bounceInUp "  placeholder="البريد الإلكتروني" name="first_name" value="" required></input>
                             </div>
                           </div>
-                          <!-- تأكيد المعلومات -->
+                          <!--  تأكيد المعلومات وطباعة -->
                           <div class="row mt-5">
-                            <div class="col-10 " style="text-align:center;">
-                              <button style="width:400px;"type="submit" class="btn btn-primary wow bounceIn">تأكيد المعلومات</button>
+                              <div class="col-2 "></div>
+                            <div class="col-3 " style="text-align:center;">
+                              <button style="width:200px;"type="submit" class="btn btn-primary wow bounceIn">تأكيد المعلومات</button>
+                            </div>
+                            <div class="col-3 " style="text-align:center;">
+                              <button style="width:200px;"type="submit" class="btn btn-primary wow bounceIn">طباعة</button>
+                            </div>
                             </div>
                           </div>
                         </form>
