--- a/تدريب اضافي 2.html
+++ b/تدريب اضافي 2.html
@@ -73,7 +73,7 @@
         <!--********************************************* content of page*********************************************************************-->
                   <div class="container">
                     <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">تقييم شهري</h1>
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">عرض طلبات التدريب الاضافي</h1>
                     </div>
                     <div class="row mt-5">
                       <!--first col  -->
@@ -124,124 +124,77 @@
                       <div class="col-sm-1">
                       </div>
                     </div>
-                    <div class="row mt-3">
+                    <div class="row mt-5">
+                      <div class="col">
+                      </div>
+                      <div class="col">
+                      </div>
+                      <div class="col">
+                      </div>
+                      <div class="col">
+                        <button style="width:150px;height: 30px;background:#288CF0; border:1px solid #FFEB3B" type="button" name="button">اضافة عرض تدريب جديد</button>
+
+                      </div>
+                    </div>
+                    <div class="row mt-5">
                       <table  class="table table-bordered wow bounceIn" >
                         <thead >
-                          <tr style="background:#288CF0;color:white;">
-                             <th style="text-align: center;">#</th>
-                             <th style="text-align: center;">المجال </th>
-                             <th style="text-align: center;">التقييم من 5</th>
+                          <tr style="background:#288CF0;color:white;text-align: center;">
+                             <th >#</th>
+                             <th >عنوان الطلب</th>
+                             <th >تفاصيل الطلب</th>
+                             <th >العمليات</th>
                           </tr>
                        </thead>
                        <tbody>
-                        <tr style="background-color:white">
+                          <tr style="background-color:white;text-align: center;">
                             <th scope="row">1</th>
-                            <td ><p>الدقة في الأداء والتركيز على التفاصيل</p></td>
-                            <td style="text-align: center;">
-                              <div>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">1</label>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">2 </label>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">3</label>
-                                 <input type="radio" id="contactChoice2"name="contact" value="phone" class="wow bounceInUp" >
-                                 <label for="contactChoice2" style="margin-left:20px;">4</label>
-                                 <input type="radio" id="contactChoice3" name="contact" value="mail" class="wow bounceInUp" >
-                                 <label for="contactChoice3" style="margin-left:20px;">5</label>
-                             </div>
-                            </td>
+                            <td >
+                            <td ></td>
+                            <td >
+                            <button type="button" class="btn btn-warning wow bounceInUp">تعديل  </button>
+                            <button type="button" class="btn btn-danger wow bounceInUp">حذف </button>
+                            <button type="button" class="btn btn-info wow bounceInUp">عرض </button>
+                          </td>
                          </tr>
                            <th scope="row" class="table-info">2</th>
-                           <td class="table-info"><p>الدقة في الأداء والتركيز على التفاصيل</p></td>
-                           <td class="table-info" style="text-align: center;">
-                              <div>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">1</label>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">2 </label>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">3</label>
-                                 <input type="radio" id="contactChoice2"name="contact" value="phone" class="wow bounceInUp" >
-                                 <label for="contactChoice2" style="margin-left:20px;">4</label>
-                                 <input type="radio" id="contactChoice3" name="contact" value="mail" class="wow bounceInUp" >
-                                 <label for="contactChoice3" style="margin-left:20px;">5</label>
-                             </div>
+                           <td class="table-info"></td>
+                           <td class="table-info"></td>
+                           <td style="text-align: center;"class="table-info">
+                             <button type="button" class="btn btn-warning wow bounceInUp">تعديل  </button>
+                             <button type="button" class="btn btn-danger wow bounceInUp">حذف </button>
+                             <button type="button" class="btn btn-info wow bounceInUp">عرض </button>
                            </td>
                          </tr>
-                         </tr>
-                         <tr  style="background-color:white">
+                         <tr>
                            <th scope="row">3</th>
-                           <td ><p>الدقة في الأداء والتركيز على التفاصيل</p></td>
-                           <td style="text-align: center;">
-                             <div>
-                                <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                <label for="contactChoice1" style="margin-left:20px;">1</label>
-                                <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                <label for="contactChoice1" style="margin-left:20px;">2 </label>
-                                <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                <label for="contactChoice1" style="margin-left:20px;">3</label>
-                                <input type="radio" id="contactChoice2"name="contact" value="phone" class="wow bounceInUp" >
-                                <label for="contactChoice2" style="margin-left:20px;">4</label>
-                                <input type="radio" id="contactChoice3" name="contact" value="mail" class="wow bounceInUp" >
-                                <label for="contactChoice3" style="margin-left:20px;">5</label>
-                            </div>
-                           </td>
-
+                             <td></td>
+                             <td></td>
+                             <td style="text-align: center;">
+                               <button type="button" class="btn btn-warning wow bounceInUp">تعديل  </button>
+                               <button type="button" class="btn btn-danger wow bounceInUp">حذف </button>
+                               <button type="button" class="btn btn-info wow bounceInUp">عرض </button>
+                               </td>
                            </tr>
                            <tr>
                              <th scope="row" class="table-info">4</th>
-                             <td class="table-info"><p>الدقة في الأداء والتركيز على التفاصيل</p></td>
-                             <td class="table-info" style="text-align: center;">
-                                <div>
-                                   <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                   <label for="contactChoice1" style="margin-left:20px;">1</label>
-                                   <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                   <label for="contactChoice1" style="margin-left:20px;">2 </label>
-                                   <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                   <label for="contactChoice1" style="margin-left:20px;">3</label>
-                                   <input type="radio" id="contactChoice2"name="contact" value="phone" class="wow bounceInUp" >
-                                   <label for="contactChoice2" style="margin-left:20px;">4</label>
-                                   <input type="radio" id="contactChoice3" name="contact" value="mail" class="wow bounceInUp" >
-                                   <label for="contactChoice3" style="margin-left:20px;">5</label>
-                               </div>
-                             </td>
+                             <td class="table-info"></td>
+                             <td class="table-info"></td>
+                             <td style="text-align: center;" class="table-info">
+                               <button type="button" class="btn btn-warning wow bounceInUp">تعديل  </button>
+                               <button type="button" class="btn btn-danger wow bounceInUp">حذف </button>
+                               <button type="button" class="btn btn-info wow bounceInUp">عرض </button>
+                               </td>
                            </tr>
-                           <tr  style="background-color:white">
-                             <th scope="row">5</th>
-                             <td ><p>الدقة في الأداء والتركيز على التفاصيل</p></td>
-                             <td style="text-align: center;">
-                               <div>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;">1</label>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;">2 </label>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;">3</label>
-                                  <input type="radio" id="contactChoice2"name="contact" value="phone" class="wow bounceInUp" >
-                                  <label for="contactChoice2" style="margin-left:20px;">4</label>
-                                  <input type="radio" id="contactChoice3" name="contact" value="mail" class="wow bounceInUp" >
-                                  <label for="contactChoice3" style="margin-left:20px;">5</label>
-                              </div>
-                             </td>
-
-                             </tr>
                             </tbody>
                            </table>
-
-                         </div>
-                         <div class="row mt-5" >
-                           <div class="col-xs-6 col-sm-12">
-                             <h4>ملاحظات إضافية</h4>
-                             <textarea class="wow bounceInUp" name="name" rows="6" cols="145" maxlength="500" placeholder="أضف ملاحظاتك فيما لا يتجاوز 500 حرف" ></textarea>
-                           </div>
                          </div>
                            <!--  زر الطباعة-->
                              <div class="row mt-5">
                                 <div class="col-xs-6 col-sm-9  ">
                                 </div>
                                 <div class="col-xs-4 col-sm-3 " >
-                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceIn ">أرسال</button>
+                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceIn ">طباعة</button>
                                 </div>
                               </div>
                             </div>
