--- a/خريج -الأخبار.html
+++ b/خريج -الأخبار.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>عرض المتدربين</title><!-- site title-->
+       <title>أخبار</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -28,8 +28,8 @@
             <div class="media ">
               <img src="lib/img/Group%20124.svg"style="width:60px;" class="align-self-center mr-3 " alt="...">
               <div class="media-body">
-                <h5 class="mt-4" style="font-size:18px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
-                <p style="color:#FFEB3B">تدريب خريجين على رأس العمل</p>
+                <h5 class="mt-4" style="font-size:15px;color:white;margin-top:20px;" >مركز العمل التنموي معا</h5>
+                <p style="color:#FFEB3B;font-size:13px;">تدريب خريجين على رأس العمل</p>
               </div>
             </div>
           </div>
@@ -69,40 +69,75 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-
-        <!--********************************************* content of page*********************************************************************-->
-                  <div class="container">
-                    <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">طلبات التدريب</h1>
-                    </div>
-                    <div class="row mt-5">
-                      <div class="col" style="text-align:center;">
-                        <label style="font-size:25px;" for="" >الاسم:</label>
-                        <label style="font-size:25px;" for="" >الاول التاني</label>
-                      </div>
-
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col" style="text-align:center;">
-                      <label for="">الطلب:</label>
-                      <input class="wow bounceInUp"style="width:350px;" type="text" name="" value="">
-                    </div>
-                  </div>
-                  <div class="row mt-5">
-                      <div class="col" style="text-align:center;">
-                    <label for="">المحتوى:</label>
-                   <textarea class="wow bounceInUp" name="name" rows="4" cols="40"></textarea>
-                  </div>
-                </div>
-                           <!--  زر الطباعة-->
-                             <div class="row mt-5">
-                                <div class="col-xs-6 col-sm-5  ">
-                                </div>
-                                <div class="col-xs-4 col-sm-3 " >
-                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceIn ">إرسال</button>
-                                </div>
-                              </div>
-                            </div>
+<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
+      <div class="container">
+        <!--  عنوان الصفحة-->
+        <div class="row mt-5 mb-3">
+          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">الأخبار</h1>
+        </div>
+        <div class="row">
+          <div class="card-group">
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر الأول </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر الثاني</h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر الثالث </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="card-group">
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر الرابع </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر الخامس </h5>
+                <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+            <div class="card">
+              <img src="lib/img/21.jpg" class="card-img-top wow bounceIn" alt="...">
+              <div class="card-body">
+                <h5 style="color:black;" class="card-title">الخبر السادس </h5>
+                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
+                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
+                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
+              </div>
+            </div>
+          </div>
+        </div>
+              </div>
               <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
