--- a/رد ع الشكوى.html
+++ b/رد ع الشكوى.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>طلب على الشاغر</title><!-- site title-->
+       <title>رد ع الشكوى</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -69,76 +69,27 @@
             <a href="https://xbootstrap.com" class="title-mobile">معا</a>
           </div>
         </nav>
-<!--*****************************************************  بداية محتوى الصفحة *********************************************************  -->
-      <div class="container">
-        <!--  عنوان الصفحة-->
-        <div class="row mt-5 mb-3">
-          <h1 class="col wow bounceIn" style="text-align:center;color:#288CF0;">الأخبار</h1>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الأول </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثاني</h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الثالث </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="card-group">
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الرابع </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر الخامس </h5>
-                <p class="card-text"> محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىمحتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="lib/img/1.jpg" class="card-img-top wow bounceIn" alt="...">
-              <div class="card-body">
-                <h5 style="color:black;" class="card-title">الخبر السادس </h5>
-                <p class="card-text">محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتو محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوى محتوىى </p>
-                <p class="card-text"><small class="text-muted">1/1/2019</small></p>
-                <a style="text-align:left;" href="#" class="btn btn-primary">للمزيد</a>
-              </div>
-            </div>
-          </div>
-        </div>
-              </div>
-              <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
+
+        <!--********************************************* content of page*********************************************************************-->
+                  <div class="container">
+                    <div class="row mt-5">
+                      </div>
+                    <div class="row mt-5">
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">رد على الشكوى </h1>
+                    </div>
+                    <div class="row mt-5">
+                      <label class=" col wow bounceIn" style="text-align:center;">هنا يضاف نص يحتوي على رد على شكوى </label>
+                    </div>
+                    <!--  زر الطباعة-->
+                     <div class="row mt-5 ">
+                       <div class="col-xs-6 col-sm-5">
+                        </div>
+                        <div class="col-xs-4 col-sm-6" >
+                          <button style="width:200px;background:#FFEB3B;border:1px solid #288CF0;" type="submit" class="btn  wow bounceInUp ">رجوع</button>
+                        </div>
+                      </div>
+                   </div>
+              <img style="margin-top:-121px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
       <div class="row top-footer">
