--- a/عرض شكاوي وإقتراحات.html
+++ b/عرض شكاوي وإقتراحات.html
@@ -82,8 +82,8 @@
                              <th style="text-align: center;">#</th>
                              <th style="text-align: center;">عنوان الطلب </th>
                              <th style="text-align: center;">نوع الطلب</th>
-                             <th style="text-align: center;">عرض</th>
-                             <th style="text-align: center;">الرد</th>
+                             <th style="text-align: center;">العمليات</th>
+
                           </tr>
                        </thead>
                        <tbody>
@@ -92,44 +92,40 @@
                             <td ></td>
                             <td ></td>
                             <td style="text-align:center;">
-                               <button  type="button" class="btn btn-info wow bounceInUp">عرض  </button>
-                            </td>
-                            <td style="text-align:center;">
-                              <button  type="button" class="btn btn-danger wow bounceInUp">الرد  </button>
+                              <button  type="button" class="btn btn-info wow bounceInUp">تعديل </button>
+                              <button  type="button" class="btn btn-danger wow bounceInUp">حذف  </button>
+                              <button  type="button" class="btn btn-warning wow bounceInUp">عرض  </button>
                             </td>
                          </tr>
                            <th scope="row" class="table-info">2</th>
                            <td class="table-info"></td>
                            <td class="table-info"></td>
                            <td class="table-info" style="text-align:center;">
-                             <button  type="button" class="btn btn-info wow bounceInUp">عرض  </button>
+                             <button  type="button" class="btn btn-info wow bounceInUp">تعديل </button>
+                             <button  type="button" class="btn btn-danger wow bounceInUp">حذف  </button>
+                             <button  type="button" class="btn btn-warning wow bounceInUp">عرض  </button>
                            </td>
-                           <td style="text-align:center;" class="table-info">
-                             <button  type="button" class="btn btn-danger wow bounceInUp">الرد  </button>
-                           </td>
+
                          </tr>
                          <tr style="background-color:white">
                            <th scope="row">3</th>
                              <td></td>
                              <td></td>
                              <td style="text-align:center;">
-                               <button  type="button" class="btn btn-info wow bounceInUp">عرض  </button>
-                             </td>
-                             <td style="text-align:center;">
-                               <button  type="button" class="btn btn-danger wow bounceInUp">الرد  </button>
-                             </td>
+                               <button  type="button" class="btn btn-info wow bounceInUp">تعديل </button>
+                               <button  type="button" class="btn btn-danger wow bounceInUp">حذف  </button>
+                               <button  type="button" class="btn btn-warning wow bounceInUp">عرض  </button>                             </td>
+
                            </tr>
                            <tr>
                              <th scope="row" class="table-info">4</th>
                              <td class="table-info"></td>
                              <td class="table-info"></td>
                              <td style="text-align:center;" class="table-info" style="text-align:center;">
-                               <button  type="button" class="btn btn-info wow bounceInUp">عرض  </button>
-
+                               <button  type="button" class="btn btn-info wow bounceInUp">تعديل </button>
+                               <button  type="button" class="btn btn-danger wow bounceInUp">حذف  </button>
+                               <button  type="button" class="btn btn-warning wow bounceInUp">عرض  </button>
                              </td>
-                             <td style="text-align:center;" class="table-info">
-                                 <button  type="button" class="btn btn-danger wow bounceInUp">الرد  </button>
-                               </td>
                            </tr>
                             </tbody>
                            </table>
