--- a/عرض شكوى.html
+++ b/عرض شكوى.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
    <html>
    <head>
-       <title>ملف حضور المتدربين</title><!-- site title-->
+       <title>عرض شكوى</title><!-- site title-->
        <meta charset="UTF-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <link rel="shortcut icon" href="" type="image/x-icon" /><!-- fav icon -->
@@ -73,113 +73,54 @@
         <!--********************************************* content of page*********************************************************************-->
                   <div class="container">
                     <div class="row mt-5">
-                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">ملف حضور المتدربين</h1>
                     </div>
                     <div class="row mt-5">
-                      <table  class="table table-bordered wow bounceIn" >
-                        <thead >
-                          <tr style="background:#288CF0;color:white;">
-                             <th style="text-align: center;">#</th>
-                             <th style="text-align: center;">الاسم </th>
-                             <th style="text-align: center;">المسمى الوظيفي</th>
-                             <th style="text-align: center;">بداية التدريب</th>
-                             <th style="text-align: center;">نهاية التدريب</th>
-                             <th style="text-align: center;">ملف حضور المتدرب</th>
-                             <th style="text-align: center;">الموافقة</th>
-                          </tr>
-                       </thead>
-                       <tbody>
-                          <tr style="background-color:white">
-                            <th scope="row">1</th>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;"></td>
-                            <td style="text-align: center;">
-                              <div>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;">نعم</label>
-                                 <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp radio"  required>
-                                 <label for="contactChoice1" style="margin-left:20px;" >لا </label>
-                                 <br>
-                                 <textarea style="display:none;" name="name" rows="3" cols="30" placeholder="ملاحظات" id="div44"></textarea>
-                                 <button style="display:none;" type="button" name="button" id="div55">إرسال</button>
-                             </div>
-                            </td>
-                         </tr>
-                           <th scope="row" class="table-info">2</th>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info"></td>
-                           <td class="table-info" style="text-align: center;">
-                             <div>
-                                <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                <label for="contactChoice1" style="margin-left:20px;">نعم</label>
-                                <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp radioss"  required>
-                                <label for="contactChoice1" style="margin-left:20px;" >لا </label>
-                                <br>
-                                <textarea style="display:none;" name="name" rows="3" cols="30" placeholder="ملاحظات" id="div88"></textarea>
-                                <button style="display:none;" type="button" name="button" id="div99">إرسال</button>
-                            </div>
-                           </td>
-
-
-                         </tr>
-                         <tr style="background-color:white">
-                           <th scope="row" >3</th>
-                             <td></td>
-                             <td></td>
-                             <td></td>
-                             <td></td>
-                             <td></td>
-                             <td style="text-align: center;">
-                               <div>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;">نعم</label>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp radios"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;" >لا </label>
-                                  <br>
-                                  <textarea style="display:none;" name="name" rows="3" cols="30" placeholder="ملاحظات" id="div66"></textarea>
-                                  <button style="display:none;" type="button" name="button" id="div77">إرسال</button>
-                              </div>
-                             </td>
-
-                           </tr>
-                           <tr>
-                             <th scope="row" class="table-info">4</th>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info"></td>
-                             <td class="table-info" style="text-align: center;">
-                               <div>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;">نعم</label>
-                                  <input type="radio" id="contactChoice1" name="contact" value="email" class="wow bounceInUp radiosss"  required>
-                                  <label for="contactChoice1" style="margin-left:20px;" >لا </label>
-                                  <br>
-                                  <textarea style="display:none;" name="name" rows="3" cols="30" placeholder="ملاحظات" id="div1010"></textarea>
-                                  <button style="display:none;" type="button" name="button" id="div1111">إرسال</button>
-                              </div>
-                             </td>
-                           </tr>
-                            </tbody>
-                           </table>
-                         </div>
-                           <!--  زر الطباعة-->
-                             <div class="row mt-5">
-                                <div class="col-xs-6 col-sm-9  ">
-                                </div>
-                                <div class="col-xs-4 col-sm-3 " >
-                                  <button style="width:200px;" type="submit" class="btn btn-info wow bounceInUp ">طباعة</button>
+                      <h1 class=" col wow bounceIn" style="text-align:center;color:#288CF0;">عرض شكوى </h1>
+                    </div>
+                    <!--  الاسم -->
+                    <div class="row mt-5 justify-content-center">
+                      <div class="col-sm-1">
+                        <label class=" col wow bounceIn">الإسم: </label>
+                      </div>
+                      <div class="col-sm-2">
+                        <label class=" col wow bounceIn" >محمد محمد محمد محمد </label>
+                      </div>
+                    </div>
+                    <!--  عنوان الشكوى-->
+                    <div class="row justify-content-center mt-3">
+                      <div class="col-sm-2">
+                        <label class=" col wow bounceIn">عنوان الشكوى : </label>
+                      </div>
+                      <div class="col-sm-3">
+                        <input readonly style="width:300px;" type="text" name="" value="" class="rounded" placeholder="أدخل عنوان الشكوى">
+                        </div>
+                    </div>
+                    <!--  محتوى الطلب-->
+                    <div class="row justify-content-center mt-3">
+                      <div class="col-sm-2">
+                        <label class=" col wow bounceIn">محتوى الشكوى: </label>
+                      </div>
+                      <div class="col-sm-3">
+                        <textarea readonly class="rounded" maxlength="500" style="width:300px;" name="name" rows="8" cols="80" placeholder="صف محتوى الشكوى فيما لا يتجاوز 500 حرف"></textarea>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center mt-3">
+                      <div class="col-sm-2">
+                        <label class=" col wow bounceIn">رد الإدارة: </label>
+                      </div>
+                      <div class="col-sm-3">
+                        <label for="">هنا يضاف نص يحتوي على رد الإدارة</label>
+                      </div>
+                    </div>
+                    <!--  زر الطباعة-->
+                      <div class="row mt-5 ">
+                        <div class=" col-sm-6  "></div>
+                                <div class=" col-sm-3" >
+                                  <button style="width:200px;background:#FFEB3B;border:1px solid #288CF0;" type="submit" class="btn  wow bounceInUp ">طباعة</button>
                                 </div>
                               </div>
                             </div>
-              <img style="margin-top:13px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
+              <img style="margin-top:-121px;margin-left:-1px;margin-bottom:-20px;" src="lib/img/a2.svg" alt="">
   <!--****************************************************** start footer **************************************************************-->
   <footer class="container-fluid" style="background:#288CF0;margin-top:-30px;color:white;">
       <div class="row top-footer">
